@@ -541,6 +541,7 @@ CREATE TABLE customers (
   message text 		NOT NULL,
   pin int(6) 		NOT NULL DEFAULT '0',
   cutoffstop int(11) 	NOT NULL DEFAULT '0',
+  consentdate int(11)   NOT NULL DEFAULT '0',
   PRIMARY KEY  (id)
 ) TYPE=MyISAM;
 
@@ -1026,4 +1027,4 @@ INSERT INTO uiconfig (section, var, value, description, disabled)
 	VALUES ('userpanel', 'owner_stats', '0', '', 0);
 	
 # --------------------------------------------------------
-INSERT INTO dbinfo (keytype, keyvalue) VALUES ('dbversion', '2008061300');
+INSERT INTO dbinfo (keytype, keyvalue) VALUES ('dbversion', '2008062400');
