@@ -200,7 +200,7 @@
 						<IMG src="img/options.gif" alt="">
 					</TD>
 					<TD width="99%">
-						<SELECT name="customeradd[cutoffstop]" {tip text="Select days number of cutoff suspending (optional)" trigger="cutoffstop"}>
+						{t}Cutoff suspending:{/t} <SELECT name="customeradd[cutoffstop]" {tip text="Select days number of cutoff suspending (optional)" trigger="cutoffstop"}>
 						    <OPTION value="0"{if !$customeradd.cutoffstop} selected{/if}>0</OPTION>
 						    <OPTION value="1"{if $customeradd.cutoffstop==1} selected{/if}>1</OPTION>
 						    <OPTION value="2"{if $customeradd.cutoffstop==2} selected{/if}>2</OPTION>
@@ -213,6 +213,9 @@
 						    <OPTION value="21"{if $customeradd.cutoffstop==21} selected{/if}>21</OPTION>
 						    <OPTION value="30"{if $customeradd.cutoffstop==30} selected{/if}>30</OPTION>
 						</SELECT>
+						<BR>
+						{t}Consent for personal data processing:{/t}
+						<INPUT TYPE="checkbox" CLASS="box" NAME="customeradd[consentdate]" VALUE="{$smarty.now}" trigger="consentdate"}{if $customeradd.consentdate} checked{/if}>
 					</TD>
 				</TR>
 			</TABLE>
