@@ -185,7 +185,7 @@
 		</TD>
 		<TD WIDTH="98%" COLSPAN="2">
 			<INPUT TYPE="TEXT" NAME="customerdata[pin]" VALUE="{if $customerinfo.pin}{$customerinfo.pin}{/if}" SIZE="6" {tip text="Enter 4 to 6 digits PIN number (optional)" trigger="pin"}>&nbsp;
-			<A href="javascript: randomize()" {tip text="[ Generate PIN ]"}>&raquo;&raquo;&raquo;</A>
+			<A href="javascript: randomize()" {tip text="Generate PIN"}>&raquo;&raquo;&raquo;</A>
 		</TD>
 	</TR>
 	<TR CLASS="LIGHT">
@@ -193,7 +193,7 @@
 			<IMG src="img/options.gif" alt="">
 		</TD>
 		<TD width="99%" COLSPAN="2">
-			<SELECT name="customerdata[cutoffstop]" {tip text="Select days number of cutoff suspending (optional)" trigger="cutoffstop"}>
+			{t}Cutoff suspending:{/t} <SELECT name="customerdata[cutoffstop]" {tip text="Select days number of cutoff suspending (optional)" trigger="cutoffstop"}>
 			    <OPTION value="0"{if !$customerinfo.cutoffstop} selected{/if}>0</OPTION>
 			    <OPTION value="1"{if $customerinfo.cutoffstop==1} selected{/if}>1</OPTION>
 			    <OPTION value="2"{if $customerinfo.cutoffstop==2} selected{/if}>2</OPTION>
@@ -206,6 +206,9 @@
 			    <OPTION value="21"{if $customerinfo.cutoffstop==21} selected{/if}>21</OPTION>
 			    <OPTION value="30"{if $customerinfo.cutoffstop==30} selected{/if}>30</OPTION>
 			</SELECT>
+			<BR>
+			{t}Consent for personal data processing:{/t}
+			<INPUT TYPE="checkbox" CLASS="box" NAME="customerdata[consentdate]" VALUE="{$smarty.now}" trigger="consentdate"}{if $customerinfo.consentdate} checked{/if}>
 		</TD>
 	</TR>
 	<TR CLASS="LIGHT">
@@ -217,19 +220,6 @@
 		</TD>
 		<TD WIDTH="98%">
 			{if $customerinfo.balance < 0}<FONT CLASS="ALERT">{$customerinfo.balance|money_format}</FONT>{else}{$customerinfo.balance|money_format}{/if}
-		</TD>
-	</TR>
-	<TR CLASS="LIGHT">
-		<TD WIDTH="1%">
-			<IMG SRC="img/users.gif" ALT="">
-		</TD>
-		<TD WIDTH="1%">
-			<B>{t}Created:{/t}<BR>
-			{t}Modified:{/t}</B>
-		</TD>
-		<TD WIDTH="98%">
-			{$customerinfo.createdby}, {$customerinfo.creationdateh}<BR>
-			{if $customerinfo.moddate}{$customerinfo.modifiedby}, {$customerinfo.moddateh}{else}-{/if}
 		</TD>
 	</TR>
                                     		</TABLE>
@@ -266,6 +256,15 @@
 		</TD>
 		<TD WIDTH="99%">
 			<TEXTAREA NAME="customerdata[notes]" COLS="60" ROWS="5" {tip text="Enter notes (optional)"}>{$customerinfo.notes|escape}</TEXTAREA>
+		</TD>
+	</TR>
+	<TR CLASS="LIGHT">
+		<TD WIDTH="1%">
+			<IMG SRC="img/users.gif" ALT="">
+		</TD>
+		<TD WIDTH="99%">
+			<B>{t}Created:{/t}</B> {$customerinfo.createdby}, {$customerinfo.creationdateh}<BR>
+			<B>{t}Modified:{/t}</B> {if $customerinfo.moddate}{$customerinfo.modifiedby}, {$customerinfo.moddateh}{else}-{/if}
 		</TD>
 	</TR>
                                         	</TABLE>
